# ExamensArbete

./: CMakeLists.txt  CNAME  README.md
embedded/: CMakeLists.txt  README.md
embedded/main/: CMakeLists.txt  global_params.c  handle_joystick.c  handle_led.c  handle_sensor.c  handle_udp.c  handle_wifi.c  kconfig.projbuild  main.c
embedded/main/include/: global_params.h  handle_joystick.h  handle_led.h  handle_sensor.h  handle_udp.h  handle_wifi.h
godot/: BLÅ.png.import  GRÖN.png.import  MenuItem.gd  MenuItem.gd.uid  RÖD.png.import  ball.gd  ball.gd.uid  ball_.gd  ball_.gd.uid  blob.gd  blob.gd.uid  blob.tscn  canvas.gd  canvas.gd.uid  control.gd  control.gd.uid  control.tscn  cpu.gd  cpu.gd.uid  draw.tscn  export_presets.cfg  icon.svg.import  main.gd  main.gd.uid  main.tscn  node.gd  node.gd.uid  node_2d.gd  node_2d.gd.uid  paddle.gd  paddle.gd.uid  player.gd  player.gd.uid  project.godot  static_body_2d.gd.uid
godot/Scenes/: ball.tscn  blob.tscn  draw.tscn  menu_scene.tscn  menu_scene.tscn9699402201.tmp  paddle.tscn  pong.tscn
godot/assets/: BKb.png.import  BLÅ.png.import  GRÖN.png.import  Main-Menu.ogg.import  RÖD.png.import  icon.svg.import
godot/sound/: Loser.mp3.import  Main Menu.mp3.import  Mario_Kart.mp3.import  Pixel_Space.mp3.import  Pong_hit.mp3.import  explosion.mp3.import  win.mp3.import
main/: CMakeLists.txt  handle_wifi.c  main.c
main/include/: handle_wifi.h
server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  udp_recv.go  udp_sender.go  utils.go  websocket.go
(+1 files in other folders)
