idf_component_register(SRCS 
                        "handle_led.c" 
                        "global_params.c" 
                        "handle_udp.c" 
                        "main.c" 
                        "handle_wifi.c" 
                        "handle_sensor.c"
                       
                    INCLUDE_DIRS 
                        "./include")