idf_component_register(SRCS 
                        "main.c"
                        "handle_led.c" 
                        "global_params.c" 
                        "handle_udp.c" 
                        "handle_wifi.c" 
                        "handle_sensor.c"
                       
                    INCLUDE_DIRS 
                        "./include")